fix colour contrast on media container column

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1701,7 +1701,7 @@ body {
   letter-spacing: .2rem;
 }
 .cid-rgE1IHAUk3 .media-container-column {
-  background-color: #f4b2bf;
+  background-color: #A7203B;
 }
 @media (max-width: 767px) {
   .cid-rgE1IHAUk3 .media-container-column {
@@ -1709,7 +1709,7 @@ body {
   }
 }
 .cid-rgE1IHAUk3 H1 {
-  color: #651023;
+  color: #fff;
 }
 .cid-rgE1IHAUk3 H3 {
   color: #ffffff;
